# cplusplus_simpleapp

./: CMakeLists.txt  main.cpp
model/: todo.cpp  todo.h  todolist.cpp  todolist.h
